# VeloZ

./: .clang-format  .dockerignore  .editorconfig  .env.example  .gitignore  API_TOOLS_PLAN.md  ARCHITECTURE_PLAN.md  ARCHITECTURE_REVIEW.md  BACKTEST_SYSTEM_PLAN.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODECOV_SETUP_SUMMARY.md  COMPREHENSIVE_ARCHITECTURE_PLAN.md  CORE_MODULES_PLAN.md  DOCUMENTATION_DEPLOYMENT_PLAN.md  EXECUTION_SYSTEM_IMPLEMENTATION_PLAN.md  EXECUTION_SYSTEM_OPTIMIZATION.md  EventLoopOptimization.md  INDUSTRIAL_ARCHITECTURE_PLAN.md  INFRASTRUCTURE_IMPLEMENTATION.md  INFRASTRUCTURE_OPTIMIZATION_PLAN.md  INFRASTRUCTURE_PLAN.md  LICENSE  LIVE_TRADING_SYSTEM_PLAN.md  MARKET_DATA_ENHANCEMENT.md  MARKET_DATA_IMPLEMENTATION_PLAN.md  README.md  README_BADGES_PREVIEW.md  RELEASE_NOTES.md  RISK_MANAGEMENT_ENHANCEMENT.md  RISK_MANAGEMENT_IMPLEMENTATION_PLAN.md  TESTING_OPTIMIZATION_PLAN.md  codecov.yml  docker-compose.yml  test_cmake.py
apps/engine/: CMakeLists.txt
apps/engine/backtest_example/: CMakeLists.txt
apps/engine/src/: command_parser.cpp  engine_app.cpp  engine_state.cpp  event_emitter.cpp  http_service.cpp  main.cpp  market_data_manager.cpp  state_persistence.cpp  stdio_engine.cpp
apps/engine/tests/: CMakeLists.txt  test_command_parser.cpp  test_engine_app.cpp  test_http_service.cpp  test_state_persistence.cpp  test_stdio_engine.cpp
apps/gateway/: ARCHITECTURE.md  CMakeLists.txt  CMakeLists.txt.router  CMakePresets.json  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  alembic.ini  alerting.py  audit.py  config_manager.py  exchange_tester.py  gateway.py  keychain.py  metrics.py  rbac.py  requirements.txt  security.py  structured_logging.py  test_audit.py  test_auth.py  test_auth_integration.py  test_binance_signing.py  test_binance_user_stream_mapping.py  test_config_modules.py  test_gateway_integration.py  test_multi_exchange.py  test_order_store.py  test_performance.py  test_permissions.py  test_rbac.py  test_security.py  test_vault_client.py  test_websocket.py  tracing.py  vault_client.py
apps/gateway/benchmarks/: README.md  benchmark_config.ini  benchmark_gateway.cpp
apps/gateway/db/: __init__.py  connection.py  migrate.py  models.py  test_migrations.py
apps/gateway/marketplace/: __init__.py  api.py
apps/gateway/src/: gateway_server.h  main.cpp  middleware.h  request_context.h  router.cpp  router.h
apps/gateway/tests/: test_account_handler.cpp  test_api_key_manager.cpp  test_auth_middleware.cpp  test_config_handler.cpp  test_engine_bridge.cpp  test_gateway_server.cpp  test_health_handler.cpp  test_jwt_manager.cpp  test_main.cpp  test_market_handler.cpp  test_metrics_audit_handlers.cpp  test_order_handler.cpp  test_rate_limiter.cpp  test_rbac.cpp  test_sse_handler.cpp
apps/gateway_cpp/: CMakeLists.txt
apps/gateway_cpp/benchmarks/: benchmark_report.py
apps/gateway_cpp/src/: gateway_server.cpp  gateway_server.h  main.cpp
apps/gateway_cpp/tests/: test_audit_logger.cpp  test_auth_handler.cpp  test_common.h  test_cors_middleware.cpp  test_gateway_routes.cpp  test_metrics_middleware.cpp  test_router.cpp  test_sse_event.cpp  test_static_handler.cpp
libs/backtest/: CMakeLists.txt
libs/backtest/src/: analyzer.cpp  backtest_engine.cpp  data_source.cpp  optimizer.cpp  reporter.cpp
libs/backtest/tests/: test_analyzer.cpp  test_backtest_engine.cpp  test_data_source.cpp  test_optimizer.cpp  test_reporter.cpp
libs/core/: CMakeLists.txt
libs/core/benchmarks/: benchmark_core.cpp  benchmark_framework.h
libs/core/kj/: CMakeLists.txt  arena.h  array.h  async-coroutine-alloc.h  async-inl.h  async-io-internal.h  async-io.h  async-prelude.h  async-queue.h  async-test.c++  async-unix.h  async-win32.h  async.h  cidr.h  common.h  debug.h  encoding.h  exception.h  filesystem.h  function.h  glob-filter.h  hash.h  io.h  list.h  main.h  map.h  memory.h  miniposix.h  mutex.h  one-of.h  refcount.h  source-location.h  string-tree.h  string.h  table.h  test.h  thread.h  threadlocal.h  time.h  timer.h  (+4 more)
libs/core/src/: config.cpp  config_manager.cpp  error.cpp  event_loop.cpp  json.cpp  logger.cpp  memory.cpp  memory_pool.cpp  metrics.cpp  optimized_event_loop.cpp  time.cpp  time_sync.cpp
libs/core/tests/: test_config_manager.cpp  test_event_loop.cpp  test_json.cpp  test_lockfree_queue.cpp  test_logger.cpp  test_memory_pool.cpp  test_optimized_event_loop.cpp  test_retry.cpp  test_timer_wheel.cpp
libs/exec/: CMakeLists.txt
libs/exec/src/: aggregated_order_book.cpp  binance_adapter.cpp  binance_reconciliation_adapter.cpp  bybit_adapter.cpp  client_order_id.cpp  coinbase_adapter.cpp  exchange_coordinator.cpp  execution_algorithms.cpp  hmac_wrapper.cpp  latency_tracker.cpp  okx_adapter.cpp  order_api.cpp  order_router.cpp  position_aggregator.cpp  reconciliation.cpp  resilient_adapter.cpp  smart_order_router.cpp
libs/exec/tests/: CMakeLists.txt  test_binance_adapter.cpp  test_client_order_id.cpp  test_exchange_adapter_interface.cpp  test_exchange_adapters.cpp  test_exchange_coordinator.cpp  test_order_router.cpp  test_reconciliation.cpp  test_resilient_adapter.cpp  test_smart_order_router.cpp
libs/market/: CMakeLists.txt
libs/market/src/: binance_rest_client.cpp  binance_websocket.cpp  kline_aggregator.cpp  managed_order_book.cpp  market_event.cpp  market_quality.cpp  metrics.cpp  order_book.cpp  subscription_manager.cpp
libs/market/tests/: test_binance_rest_client.cpp  test_managed_order_book.cpp  test_market_data_advanced.cpp  test_market_event.cpp  test_metrics.cpp  test_order_book.cpp  test_subscription_manager.cpp  test_websocket.cpp
libs/oms/: CMakeLists.txt
libs/oms/src/: order_record.cpp  order_wal.cpp  position.cpp
libs/oms/tests/: test_order_wal.cpp  test_position.cpp
libs/risk/: CMakeLists.txt
libs/risk/src/: circuit_breaker.cpp  (+8 more)
libs/strategy/: CMakeLists.txt
tests/integration/: CMakeLists.txt  test_backtest_e2e.cpp  test_engine_integration.cpp  test_harness.h  test_multi_strategy.cpp  test_order_wal_recovery.cpp
tests/load/: CMakeLists.txt  gateway_load_test.py  load_test_framework.h  load_test_main.cpp  production_load_test.cpp
(+881 files in other folders)
